# rcol

./: CHANGELOG.md  pyproject.toml
docs/: getting-started.md
docs/setup/: api-key.md  python-setup.md  survey-mode.md  upload-instruments.md
src/rcol/: instruments.py  rtg.py
